--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
