--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@y/websocket-server": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "y-websocket": "^3.0.0"
   }
 }
