--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@y/websocket-server": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongodb": "^7.0.0",
     "socket.io": "^4.8.1",
+    "y-leveldb": "^0.2.0",
     "y-websocket": "^3.0.0"
   }
 }
